footer, signin page, signup page, newsletter  modified

--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "react-dom": "^18",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
+    "react-spinners": "^0.17.0",
     "recharts": "latest",
+    "resend": "^4.6.0",
     "snappy": "latest",
     "socks": "latest",
     "sonner": "latest",
