openai key added

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@emotion/is-prop-valid": "latest",
     "@google/generative-ai": "latest",
     "@hookform/resolvers": "^3.9.1",
-    "@langchain/core": "latest",
+    "@langchain/core": "^0.3.62",
     "@langchain/google-genai": "latest",
+    "@langchain/openai": "^0.5.18",
     "@mongodb-js/zstd": "latest",
     "@pinecone-database/pinecone": "latest",
     "@radix-ui/react-accordion": "latest",
@@ -64,6 +65,7 @@
     "mongoose": "latest",
     "next": "14.2.16",
     "next-themes": "latest",
+    "openai": "^5.9.0",
     "react": "^18",
     "react-day-picker": "latest",
     "react-dom": "^18",
